# google_sheets

./: .gitignore  README.md  db.Dockerfile  db_engine.py  main.py  pyproject.toml  service.Dockerfile
src/db_data/: db_datas.py
src/graph/: graph_data.py
src/models/: __init__.py  sheet.py
src/route/: routers.py
src/sheets/: get_sheets.py
